[package]
name = "downdelving"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Douglas"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
rltk = { version = "0.8.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specs = "0.16.1"
specs-derive = "0.4.1"
